# DermBench

./: .gitignore  DATA_NOTICE.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: models.json
data/cot/Acne and Rosacea Photos/: 07PerioralDermEye.jpg.txt  07Rhinophyma1.jpg.txt  07RosaceaFulFAce.jpg.txt  07RosaceaMilia0120.jpg.txt  07RosaceaOK0828063.jpg.txt  07SteroidPerioral.jpg.txt  07SteroidPerioral1.jpg.txt  07VascularFace0120.jpg.txt  07rhnophymas0321051.jpg.txt  07sebDerem1101051.jpg.txt  08PerioralDerm1.jpg.txt  ComedonesEars-1.jpg.txt  Hidradenitis-Suppurativa-Areola-2.jpg.txt  Sebaceous-glands-Areola-4.jpg.txt  acne-closed-comedo-003.jpg.txt  acne-closed-comedo-1.jpg.txt  acne-closed-comedo-13.jpg.txt  acne-closed-comedo-15.jpg.txt  acne-closed-comedo-16.jpg.txt  acne-closed-comedo-2.jpg.txt  acne-closed-comedo-21.jpg.txt  acne-closed-comedo-22.jpg.txt  acne-closed-comedo-24.jpg.txt  acne-closed-comedo-25.jpg.txt  acne-closed-comedo-26.jpg.txt  (+286 more)
data/manifest/: categories.csv  dermbench_test.jsonl  source_audit.json
dermbench/: __init__.py  data.py  scoring.py
dermbench/configs/: models.json
dermbench/dermeval/: __init__.py  constants.py  convert_to_llava_sft.py  dataio.py  llava_infer.py  prompts.py  score_parser.py
dermbench/prompts/: candidate_generation.txt  dermbench_judge.txt
docs/: data_mapping.md  dermeval.md  scoring_criteria.md
examples/: candidate_sample.jsonl
metadata/: source_audit.json
scripts/: generate_candidates_openai.py  score_with_deepseek.py  summarize_scores.py  validate_release.py
(+3686 files in other folders)
