[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dermbench"
version = "0.1.0"
description = "Text-only DermBench diagnostic narrative benchmark utilities."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.86.0",
  "pillow>=11.1.0",
  "tqdm>=4.67.1"
]

[tool.setuptools.packages.find]
include = ["dermbench*"]

