[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dermbench"
version = "0.1.0"
description = "DermBench diagnostic narrative benchmark and DermEval utilities."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.86.0",
  "pillow>=11.1.0",
  "tqdm>=4.67.1"
]

[project.optional-dependencies]
dermeval = [
  "accelerate>=0.21.0",
  "requests>=2.31.0",
  "torch>=2.1.0",
  "transformers>=4.37.0"
]

[tool.setuptools.packages.find]
include = ["dermbench*"]
